--- a/TestApplication/app/src/main/AndroidManifest.xml
+++ b/TestApplication/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <service android:name="com.example.jeric.MusicService" />
+        <service android:name="com.example.jeric.testapplication.MusicService" />
     </application>
 
 </manifest>
